--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
 </main>
             </div>
             <div class="buttons">
-              <button type="button" id="random"></button>
-              <button type="button" id="before"></button>
-              <button type="button" id="next"></button>
-              <button type="button" id="playPause"></button>
+              <div class="vacio"></div>
+              <button type="button" id="random" onclick="random()"></button>
+              <div class="bppn">
+                <button type="button" id="before"></button>
+                <button type="button" id="next"></button>
+                <button type="button" id="playPause"></button>
+              </div>
               <button type="button" id="repeat"></button>
               <button type="button" id="share"></button>
+              <div class="vacio"></div>
             </div>
           </div>
         </div>
